--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,37 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>Alfescola</title>
+  <title>ALF Escola</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var hostname = window.location.hostname;
+      var siteTitle = "ALF Escolas";
+      var faviconPath = "favicon.ico";
+
+      if (hostname === 'localhost') {
+        siteTitle = "ALF Escolas(dev)";
+        faviconPath = "favicon.ico";
+
+      } else if (hostname === 'frontends-planejabrasil.urnjtd.easypanel.host') {
+        siteTitle = "Testes DEV";
+        faviconPath = "favicon.ico";
+      }
+
+      document.title = siteTitle;
+      document.querySelector("link[rel='icon']").setAttribute("href", faviconPath);
+    });
+
+  </script>
+
+
 </body>
 </html>
